css/stylesheet.css
div {
  border: 1px solid #ff0000;
}

* {
  box-sizing: border-box;
  margin: 0px;
  padding: 0px;
}

a {
  text-decoration: none;
}

body {
  margin: 0px;
  padding: 0px;
  border: 1px solid red;
  height: 100vh;
  width: auto;
}

.main_text {
  color: whitesmoke;
  text-align: center;
  margin: 4px 2px;
}

h1 {
  margin-top: 0px;
  font-size: 100;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

h2 {
  font-family: 'Comfortaa';
  font-size: 20;
  font-weight: 300;
}

.row {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-left: 20%;
  padding-right: 20%;
  width:auto;
  height: auto;
}

.column {
  float: left;
  padding: 10px;

}

.gallery {
  overflow-wrap: break-word;
  width: 60%;
  float: left;
  padding: 100px, 100px;
}

.button_group {
  width: 40%;
  display: block;
  justify-content: center;
  align-items: center;
  padding: 0px;
}

.row:after {
  content: "";
  display: table;
  clear: both;
}

.nested {
  float: center;
  margin: auto;
  width: inherit;
  display: block;
  justify-content: center;
  align-items: center;
}

.button_group button {
    border: none;
    background-color: rgb(126, 161, 186);
    color:white;
    padding: 15px 6px;
    text-align: center;
    text-decoration: none;
    font-family: 'Comfortaa';
    font-size: 14px;
    margin: 20px auto;
    
    transition-duration: 0.4s;
    cursor: pointer;
    border-radius: 25px;
    display: block;
    /* button width */
    width: 70%;
    
  }

.button:hover {
  background-color: #bbcdcc;
  color: white;
  }

.slide {
  max-width: 100%;
  max-height: 85vh;
  padding: 50px 20px;
}

.footer {
  max-width: 100%;
  max-height: 100%;
  text-align: center;
  background-color: rgb(126, 161, 186);
  margin: 0px;
  padding: 10px;
  position: relative;
  bottom: 0;
}

.footer_text {
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 13px;
  color: whitesmoke;
}

